examples/test/testpolicy15239.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15239
  namespace: namespace265
spec:
  podSelector:
    matchLabels:
      key25: value2
      key46: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value0
          key32: value41
          key13: value19
      podSelector:
        matchLabels:
          key4: value36
